修改成web项目，修改报错

--- a/src/main/resources/like_chat_db.properties
+++ b/src/main/resources/like_chat_db.properties
@@ -1,7 +1,7 @@
 # master db
 
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/live_test
+db.url=jdbc:mysql://127.0.0.1:3306/like_chat
 db.username=root
 db.password=
 db.maxActive=50
