--- a/src/main/resources/like_chat_db.properties
+++ b/src/main/resources/like_chat_db.properties
@@ -1,9 +1,16 @@
 # master db
 
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/like_chat
-db.username=root
-db.password=
+#db.url=jdbc:mysql://127.0.0.1:3306/like_chat
+#db.username=root
+#db.password=
+
+# be change url to 127.0.0.1 at online;
+#db.url=jdbc:mysql://127.0.0.1:3306/wums_db?useUnicode=true&characterEncoding=UTF-8
+db.url=jdbc:mysql://114.215.221.15:3306/likechat_db?useUnicode=true&characterEncoding=UTF-8
+db.username=superspeed
+db.password=superspeed!@#$%
+
 db.maxActive=50
 db.maxIdle=15
 db.minIdle=5
